# sec-log-analyzer-demo

./: .gitignore  README.md  TODO.md  config.yaml  pyproject.toml
seclog/: __main__.py  config.py  models.py  parser.py
seclog/detectors/: __init__.py  abstract.py  brute_force.py  port_scan.py  sql_injection.py  unusual_access.py
seclog/output/: console.py  json.py
seclog/reporting/: __init__.py  json.py
src/pyseclog/: __main__.py  config.py  models.py  parser.py
src/pyseclog/detectors/: __init__.py  abstract.py  brute_force.py  port_scan.py  sql_injection.py  unusual_access.py
src/pyseclog/reporting/: console.py  json.py
tests/: test_config.py  test_detectors.py  test_output.py  test_parser.py
