[project]
name = "seclog"
version = "1.0.0"
description = "A simple security log analyzer"
authors = [
    {name = "mkalitka", email = "mikolaj.kalitka@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
pytest = "^8.4.1"

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 100

[tool.poetry.scripts]
seclog = "seclog.__main__:main"
